[tool.poetry]
name = "l4-lp"
version = "0.1.0"
description = "Rule engine and language bindings for L4 (a DSL for business rules)"
authors = ["Joe Watt"]
readme = "README.md"
packages = [
  {include = "l4_lp_py", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"
janus-swi = {git = "https://github.com/SWI-Prolog/packages-swipy.git", tag = "V9.3.19"}
javascript = "^1!1.1.3"
edn-format = "^0.7.5"
# pyrsistent = "^0.20.0"
cytoolz = "^0.12.3"

[tool.poetry.dev-dependencies]
ipdb = "*"
pout = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"